--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --primary: rgb(229 231 235);
+  --primary-active: rgb(250 250 250);
+  --secondary: rgb(10 10 10);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --primary: rgb(10 10 10);
+    --primary-active: rgb(30 30 30);
+    --secondary: rgb(229 231 235);
+    
+  }
+}
